doc updated - photo user
